--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
+    "@types/http-proxy": "^1.17.16",
     "@types/node": "^24.0.6",
     "@types/ws": "^8.18.1",
     "ts-node": "^10.9.2",
